Fotos guardadas en directorio Fotos se cargan correctamente del dir Refactor generico Imágenes deshabilitadas